--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# custom
+.cache
+.vscode
+.docz
+
 # dependencies
 /node_modules
 /.pnp
